--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "node": "^20.18.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "serverless-http": "^3.2.0"
   }
 }
