--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+      { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+      { "src": "/users", "dest": "/index.js" },
+      { "src": "/(.*)", "dest": "/index.js" }
+  ]
+}
   
